@@ -1,5 +1,4 @@
 # TODO
 
-* Download attachments in goroutines
 * SLL/TLS support
 * Remove extra smtp headers generated by `jordan-wright/email`
